@@ -1,3 +1,10 @@
+Mon Jan 18 22:11:13 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/framework/TransportImpl.cpp:
+
+          Added copy-out to avoid holding locks over possible remote
+          calls as a result of reliability_lost.
+
 Mon Jan 18 21:58:22 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>
 
         * performance-tests/Bench/doc/latency-commands:
@@ -24,6 +31,7 @@ Mon Jan 18 21:58:22 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>
 
           Updated with a common rate to execute latency tests at.
 
+>>>>>>> .r2903
 Mon Jan 18 20:04:25 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/PublisherImpl.h:
